# mico

./: .dockerignore  .gitignore  CHANGELOG.md  LICENSE  PROJECT_MANIFEST.md  README.md  RELEASE_CHECKLIST.md
rust_project/: Cargo.toml  README.md
rust_project/crates/mico_cli/: Cargo.toml
rust_project/crates/mico_cli/src/: main.rs
rust_project/crates/mico_cli/tests/: cli_smoke.rs
rust_project/crates/mico_cli/tests/fixtures/: help.txt
rust_project/crates/mico_cli/tests/fixtures/diagnostics/: contract_violation.json  contract_violation.mico  direct_cdc_without_adapter.json  invalid_width.json  reversed_direction.json  unknown_adapter_kind.json  unknown_adapter_kind.mico  valid_build.json  valid_check.json  valid_parse.json
rust_project/crates/mico_codegen/: Cargo.toml
rust_project/crates/mico_codegen/src/: lib.rs
rust_project/crates/mico_codegen/tests/fixtures/golden/: axi_apb_wrapper_case.sv  axi_apb_wrapper_case.sva  axi_apb_wrapper_case.trace.json  cdc_event_status_case.sv  cdc_event_status_case.sva  cdc_event_status_case.trace.json  cdc_fifo.sv  cdc_fifo.sva  cdc_fifo.trace.json  direct_stream.sv  direct_stream.sva  direct_stream.trace.json  multi_ip_telemetry_case.sv  multi_ip_telemetry_case.sva  multi_ip_telemetry_case.trace.json  protocol_bridge_case.sv  protocol_bridge_case.sva  register_status_case.sv  (+18 more)
rust_project/crates/mico_frontend/: Cargo.toml
rust_project/crates/mico_frontend/src/: lib.rs
rust_project/crates/mico_ir/: Cargo.toml
rust_project/crates/mico_ir/src/: lib.rs
rust_project/examples/: cdc_fifo.mico  invalid_width.mico  stream_fifo.mico  width_adapter.mico
rust_project/scripts/: README.md  run_smoke.sh
(+364 files in other folders)
