[workspace]
members = [
  "crates/mico_ir",
  "crates/mico_frontend",
  "crates/mico_codegen",
  "crates/mico_cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.96.0"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/NayCheno/mico"

[workspace.lints.rust]
unsafe_code = "forbid"
