[package]
name = "mico_codegen"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
mico_ir = { path = "../mico_ir" }
serde_json = { version = "1.0", default-features = false, features = ["std"] }

[dev-dependencies]
mico_frontend = { path = "../mico_frontend" }

[lib]
path = "src/lib.rs"
